added css styles for desktop landing page

--- a/index.html
+++ b/index.html
@@ -1,89 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>upGrade Tutors</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Raleway:wght@400;600&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="wrapper">
         <header class="landing-page">
             <nav>
                 <ul>
-                    <li id="logo"><img src="assets/up-24.png">upGrade Tutors</li>
-                    <li>Enroll in Tutoring</li>
-                    <li>Become a Tutor</li>
-                    <li>Partner with Us</li>
-                    <li>Sign In</li>
-                    <li>Sign Up</li>
+                    <li id="logo"><a href="#"><img src="assets/up-24.png">upGrade Tutors</a></li>
+                    <li><a href="#">Enroll in Tutoring</a></li>
+                    <li><a href="#">Become a Tutor</a></li>
+                    <li><a href="about.html">Partner with Us</a></li>
+                    <li class="logo"><a href="#">Sign In</a></li>
+                    <li class="logo"><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
-            <h2 class="mission-tagline">Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior Volunteers</h2>
+            <h2 class="mission-tagline">Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior
+                Volunteers</h2>
         </header>
         <main class="landing-page">
             <section class="intro">
-                <h1>Welcome to <img src="assets/up-24.png"><strong>upGrade Tutors</strong>.</h1>
-                <p>We connect seniors with expertise, empathy, and availability with students who are frustrated, struggling, and teachable.</p>
-                <p>Our students thrive with our tutors 1-on-1 support.</p>
-                <p>Our senior volunteers enjoy the positive impact they have on the lives of our students.</p>
-                <button class="cta">Get Started</button>
-                <img src="assets/happy-student.jpg" width="400px" alt="happy student">
+                <div class="intro-text">
+                    <h1>Welcome to <img src="assets/up-24.png"><span class="logo">upGrade Tutors</span>.</h1>
+                    <p>We connect seniors with expertise, empathy, and availability with students who are frustrated,
+                        struggling, and teachable.</p>
+                    <p>Our students thrive with our tutors 1-on-1 support.</p>
+                    <p>Our senior volunteers enjoy the positive impact they have on the lives of our students.</p>
+                    <button onclick="window.location.href='#'" class="cta">Get Started</button>
+                </div>
+                <div class="intro-img">
+                    <figure>
+                        <img src="assets/happy-student.jpg" width="400px" alt="happy student">
+                        <figcaption class="attribution"><a href='https://www.freepik.com/photos/computer'>Computer photo created by marymarkevich -
+                        www.freepik.com</a></figcaption> 
+                    </figure>
+                </div>
             </section>
             <section class="student-volunteer">
                 <div class="student">
-                    <img src="assets/frustrated-student.jpg" width="400px" alt="frustrated student">
-                    <p>Are you a student feeling frustrated? Are you struggling at school and just not able to find the support you need? Get free online 1-on-1 tutoring with <img src="assets/up-24.png"><strong>upGrade Tutors</strong>. Help is available for high school subjects including math, science, history, English, foreign language, and computer science.</p>
-                    <button class="cta">Find a Tutor</button>
+                    <figure>
+                        <img src="assets/frustrated-student.jpg" width="400px" alt="frustrated student">
+                        <figcaption class="attribution"><a href='https://www.freepik.com/photos/computer'>Computer photo created by marymarkevich -
+                            www.freepik.com</a>
+                        </figcaption> 
+                    </figure>
+                    <p>Are you a student feeling frustrated? Are you struggling at school and just not able to find the
+                        support you need? Get free online 1-on-1 tutoring. Help is available for high school subjects
+                        including math, science, history, English, foreign language, and computer science.</p>
+                    <button onclick="window.location.href='#'" class="cta">Find a Tutor</button>
                 </div>
                 <div class="volunteer">
-                    <img src="assets/senior-woman-victory.jpg" width="400px" alt="senior woman celebrating">
-                    <p>Are you a retured senior with expertise, empathy, and time to share. Your knowledge and support can make a difference in the life of a high school student. Choose your academic subject strengths and set your own availability.</p>
-                    <button class="cta">Become a Tutor</button>
+                    <figure>
+                        <img src="assets/senior-woman-victory.jpg" width="400px" alt="senior woman celebrating">
+                        <figcaption class="attribution"><a href='https://www.freepik.com/photos/coffee'>Coffee photo created by freepik - www.freepik.com</a>
+                        </figcaption> 
+                    </figure>
+                    <p>Are you a retired senior with expertise, empathy, and time to share. Your knowledge and support
+                        can make a difference in the life of a high school student. Choose your academic subject
+                        strengths and set your own availability.</p>
+                    <button onclick="window.location.href='#'" class="cta">Become a Tutor</button>
                 </div>
             </section>
             <section class="subjects">
-                <div class="computer">
-                    <img src="assets/html.png" alt="computer with code">
-                    <p>Computer Science</p>
-                </div>
-                <div class="english">
-                    <img src="assets/book.png" alt="literature books">
-                    <p>English</p>
-                </div>
-                <div class="foreign-language">
-                    <img src="assets/foreign-language.png" alt="foreign language words">
-                    <p>Foreign Language</p>
-                </div>
-                <div class="history">
-                    <img src="assets/history.png" alt="globe in a sandtimer">
-                    <p>History</p>
-                </div>
-                <div class="math">
-                    <img src="assets/formula.png" alt="math formulas">
-                    <p>Math</p>
-                </div>
-                <div class="science">
-                    <img src="assets/lab.png" alt="chemistry lab equipment">
-                    <p>Science</p>
+                <h2>Find a Tutor or Volunteer to Tutor in These High
+                    School Subjects</h2>
+                <div class="subjects-grid">
+                    <div class="subject">
+                        <img src="assets/html.png" alt="computer with code">
+                        <p>Computer Science</p>
+                    </div>
+                    <div class="subject">
+                        <img src="assets/book.png" alt="literature books">
+                        <p>English</p>
+                    </div>
+                    <div class="subject">
+                        <img src="assets/foreign-language.png" alt="foreign language words">
+                        <p>Foreign Language</p>
+                    </div>
+                    <div class="subject">
+                        <img src="assets/history.png" alt="globe in a sandtimer">
+                        <p>History</p>
+                    </div>
+                    <div class="subject">
+                        <img src="assets/formula.png" alt="math formulas">
+                        <p>Math</p>
+                    </div>
+                    <div class="subject">
+                        <img src="assets/lab.png" alt="chemistry lab equipment">
+                        <p>Science</p>
+                    </div>
                 </div>
             </section>
         </main>
-        <footer class="landing-page">
-            <p>&copy; 2020 <img src="assets/up-24.png">upGrade Tutors</p>
-            <div class="img-icon-attr">
-                <p><a href='https://www.freepik.com/photos/business'>Business photo created by marymarkevich - www.freepik.com</a>
+        <footer class="landing-page">  
+            <div class="icon-attr">
+                <p>Icons made by 
+                    <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, 
+                    <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>, 
+                    <a href="https://www.flaticon.com/authors/photo3idea-studio"
+                    title="photo3idea_studio">photo3idea_studio</a>, and <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> 
+                    from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
                 </p>
-                <p><a href='https://www.freepik.com/photos/computer'>Computer photo created by marymarkevich - www.freepik.com</a>
-                </p>
-                <p><a href='https://www.freepik.com/photos/coffee'>Coffee photo created by freepik - www.freepik.com</a>
-                </p>
-                <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-                <p>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-                <p>Icons made by <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-                <p>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
-             </div>
+            </div>
+            <p>&copy; 2020 <img src="assets/up-24.png" alt="logo up arrow"><span class="logo">upGrade Tutors</span></p>
         </footer>
     </div>
 </body>
+
 </html>
