added media queries for 800 and 500px landing page styles

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
                     <li><a href="#">Enroll in Tutoring</a></li>
                     <li><a href="#">Become a Tutor</a></li>
                     <li><a href="about.html">Partner with Us</a></li>
-                    <li class="logo"><a href="#">Sign In</a></li>
+                    <li id="signin" class="logo"><a href="#">Sign In</a></li>
                     <li class="logo"><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
-            <h2 class="mission-tagline">Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior
-                Volunteers</h2>
+            <div class="mission-tagline">
+                <h2>Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior
+                    Volunteers</h2>
+            </div>
+            
         </header>
         <main class="landing-page">
             <section class="intro">
