adjusted navbar for responsive widths

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <header class="landing-page">
             <nav>
                 <ul>
-                    <li id="logo"><a href="#"><img src="assets/up-24.png">upGrade Tutors</a></li>
+                    <li id="logo"><a href="#"><img src="assets/up-24.png"><a href="#">upGrade Tutors</a></li>
                     <li><a href="#">Enroll in Tutoring</a></li>
                     <li><a href="#">Become a Tutor</a></li>
                     <li><a href="about.html">Partner with Us</a></li>
                     <li id="signin" class="logo"><a href="#">Sign In</a></li>
-                    <li class="logo"><a href="#">Sign Up</a></li>
+                    <li id="signup" class="logo"><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
             <div class="mission-tagline">
