--- a/about.html
+++ b/about.html
@@ -17,16 +17,18 @@
         <header class="about-page">
             <nav>
                 <ul>
-                    <li id="logo"><img src="assets/up-24.png">upGrade Tutors</li>
-                    <li>Enroll in Tutoring</li>
-                    <li>Become a Tutor</li>
-                    <li>Partner with Us</li>
-                    <li>Sign In</li>
-                    <li>Sign Up</li>
+                    <li id="logo"><a href="#"><img src="assets/up-24.png"><a href="index.html">upGrade Tutors</a></li>
+                    <li><a href="#">Enroll in Tutoring</a></li>
+                    <li><a href="#">Become a Tutor</a></li>
+                    <li><a href="#">Partner with Us</a></li>
+                    <li id="signin" class="logo"><a href="#">Sign In</a></li>
+                    <li class="logo"><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
-            <h2 class="mission-tagline">Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior
-                Volunteers</h2>
+            <div class="mission-tagline">
+                <h2>Closing the Achievement Gap for Students &amp; Enriching the Lives of Senior
+                    Volunteers</h2>
+            </div>
         </header>
         <main class="about-page">
             <section class="mission">
@@ -57,7 +59,7 @@
                 </div>
                 <div class="teammate">
                     <figure>
-                        <img src="https://ca.slack-edge.com/ESZCHB482-W012H6K8EQM-2af91e78f792-512" width="200px"
+                        <img src="https://avatars1.githubusercontent.com/u/27017149?s=460&u=cfa43c759c81e02d6a713090c91c189753643620&v=4" width="200px"
                             alt="Nathan Griffith">
                         <figcaption>Nathan Griffith<br>Front End Developer<figcaption>
                     </figure>
@@ -133,12 +135,14 @@
                 </div>
             </section>
         </main>
-        <footer class="landing-page">
-            <p>&copy; 2020 <img src="assets/up-24.png">upGrade Tutors</p>
-            <div class="img-icon-attr">
-                <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
-                        href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+        <footer class="about-page">  
+            <div class="icon-attr">
+                <p>Icons made by 
+                    <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+                    from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+                </p>
             </div>
+            <p>&copy; 2020 <img src="assets/up-24.png" alt="logo up arrow"><span class="logo">upGrade Tutors</span></p>
         </footer>
     </div>
 </body>
