added responsive styles for about page

--- a/about.html
+++ b/about.html
@@ -17,13 +17,12 @@
         <header class="about-page">
             <nav>
                 <ul>
-                    <li id="logo" class="home"><a href="#"><img src="assets/up-24.png"><a href="index.html">upGrade
-                                Tutors</a></li>
+                    <li id="logo" class="home"><a href="index.html"><img src="assets/up-24.png">upGrade Tutors</a></li>
                     <li><a href="#">Enroll in Tutoring</a></li>
                     <li><a href="#">Become a Tutor</a></li>
-                    <li><a href="#">Partner with Us</a></li>
+                    <li><a href="about.html">Partner with Us</a></li>
                     <li id="signin" class="logo"><a href="#">Sign In</a></li>
-                    <li class="logo"><a href="#">Sign Up</a></li>
+                    <li id="signup" class="logo"><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
             <div class="mission-tagline">
@@ -38,7 +37,7 @@
                 <p>We see our Senior Tutors as untapped, valuable individuals who have much to share and contribute.</p>
                 <p>We see our Students as individuals with unlimited potential.</p>
                 <p>Partner with us today.</p>
-                <button class="cta">Partner with Us</button>
+                <button onclick="window.location.href='#'" class="cta">Contact Us</button>
             </section>
             <section class="team">
                 <div class="team-title">
