--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Raleway:wght@400;600&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +23,12 @@
                     <li><a href="#">Enroll in Tutoring</a></li>
                     <li><a href="#">Become a Tutor</a></li>
                     <li><a href="about.html">Partner with Us</a></li>
-                    <li id="signin" class="logo"><a href="#">Sign In</a></li>
-                    <li id="signup" class="logo"><a href="#">Sign Up</a></li>
+                    <li id="login" class="logo"><a href="#"><span class="material-icons">
+                        login
+                        </span>Log In</a></li>
+                    <li id="signup" class="logo"><a href="#"><span class="material-icons">
+                        person_add_alt_1
+                        </span>Sign Up</a></li>
                 </ul>
             </nav>
             <div class="mission-tagline">
