formatted and commented HTML

--- a/about.html
+++ b/about.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>upGrade Tutors - Partner with Us</title>
+    <!-- add up arrow icon to title tab -->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/styles.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Raleway:wght@400;600&display=swap"
         rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header class="about-page">
+            <!-- Primary Navigation -->
             <nav>
                 <ul>
                     <li id="logo" class="home"><a href="index.html"><img src="assets/up-24.png">upGrade Tutors</a></li>
@@ -24,11 +25,11 @@
                     <li><a href="#">Become a Tutor</a></li>
                     <li><a href="about.html">Partner with Us</a></li>
                     <li id="login" class="logo"><a href="#"><span class="material-icons">
-                        login
-                        </span>Log In</a></li>
+                                login
+                            </span>Log In</a></li>
                     <li id="signup" class="logo"><a href="#"><span class="material-icons">
-                        person_add_alt_1
-                        </span>Sign Up</a></li>
+                                person_add_alt_1
+                            </span>Sign Up</a></li>
                 </ul>
             </nav>
             <div class="mission-tagline">
@@ -37,6 +38,7 @@
             </div>
         </header>
         <main class="about-page">
+            <!-- upGrade Tutors team values -->
             <section class="mission">
                 <h1>At <img src="assets/up-24.png"><span class="logo">upGrade Tutors:</span></h1>
                 <p>We are passionate about accessibility and equity in learning.</p>
@@ -45,6 +47,7 @@
                 <p>Partner with us today.</p>
                 <button onclick="window.location.href='#'" class="cta">Contact Us</button>
             </section>
+            <!-- upGrade Tutors intro to team -->
             <section class="team">
                 <div class="team-title">
                     <h2>Meet Our Team</h2>
@@ -61,9 +64,10 @@
                             functionality. I discovered a passion for building websites and switched my career path to
                             attack more creative and innovative tasks that come with full stack development. </p>
                         <div class='social-icons'>
-                            <a href="https://github.com/jiangeyre" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
-                            <a href="https://www.linkedin.com/in/jiangeyre/" target="_blank"><img src="assets/LI-In-Bug.png"
-                                    width="32px"></a>
+                            <a href="https://github.com/jiangeyre" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://www.linkedin.com/in/jiangeyre/" target="_blank"><img
+                                    src="assets/LI-In-Bug.png" width="32px"></a>
                         </div>
                     </div>
                     <div class="teammate">
@@ -77,7 +81,8 @@
                             natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
                             beatae.</p>
                         <div class='social-icons'>
-                            <a href="https://github.com/ngriffith29" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://github.com/ngriffith29" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
                             <!-- <a href="#" target="_blank"><img src="assets/LI-In-Bug.png" width="32px"></a> -->
                         </div>
                     </div>
@@ -91,10 +96,11 @@
                             odit
                             natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
                             beatae.</p>
-                            <div class='social-icons'>
-                            <a href="https://github.com/arianahabas" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
-                            <a href="https://www.linkedin.com/in/ariana-habas/" target="_blank"><img src="assets/LI-In-Bug.png"
-                                    width="32px"></a>
+                        <div class='social-icons'>
+                            <a href="https://github.com/arianahabas" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://www.linkedin.com/in/ariana-habas/" target="_blank"><img
+                                    src="assets/LI-In-Bug.png" width="32px"></a>
                         </div>
                     </div>
                     <div class="teammate">
@@ -108,7 +114,8 @@
                             natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
                             beatae.</p>
                         <div class='social-icons'>
-                            <a href="https://github.com/EmilyLow" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://github.com/EmilyLow" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
                             <!-- <a href="" target="_blank"><img src="assets/LI-In-Bug.png" width="32px"></a> -->
                         </div>
                     </div>
@@ -125,9 +132,10 @@
                             an
                             avid traveler, foodie, gamer, and collector of dad jokes. </p>
                         <div class='social-icons'>
-                            <a href="https://github.com/aricrepp" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
-                            <a href="https://www.linkedin.com/in/aric-repp/" target="_blank"><img src="assets/LI-In-Bug.png"
-                                    width="32px"></a>
+                            <a href="https://github.com/aricrepp" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://www.linkedin.com/in/aric-repp/" target="_blank"><img
+                                    src="assets/LI-In-Bug.png" width="32px"></a>
                         </div>
                     </div>
                     <div class="teammate">
@@ -143,15 +151,17 @@
                             with a current interest in front end development. My skills include HTML, CSS, JavaScript,
                             Python, and git version control</p>
                         <div class='social-icons'>
-                            <a href="https://github.com/ginabethrussell" target="_blank"><img src="assets/GitHub-Mark-32px.png"></a>
-                            <a href="https://www.linkedin.com/in/gina-beth-russell/" target="_blank"><img src="assets/LI-In-Bug.png"
-                                    width="32px"></a>
+                            <a href="https://github.com/ginabethrussell" target="_blank"><img
+                                    src="assets/GitHub-Mark-32px.png"></a>
+                            <a href="https://www.linkedin.com/in/gina-beth-russell/" target="_blank"><img
+                                    src="assets/LI-In-Bug.png" width="32px"></a>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
         <footer class="about-page">
+            <!-- attributions for icons -->
             <div class="icon-attr">
                 <p>Icons made by
                     <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
