added new version of student images optimized with tinyjpg.com

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="intro-img">
                     <figure>
-                        <img src="assets/happy-student.jpg" width="400px" alt="happy student">
+                        <img src="assets/happy-student-opt.jpg" width="400px" alt="happy student">
                         <figcaption class="attribution"><a href='https://www.freepik.com/photos/computer'>Computer photo created by marymarkevich -
                         www.freepik.com</a></figcaption> 
                     </figure>
@@ -52,7 +52,7 @@
             <section class="student-volunteer">
                 <div class="student">
                     <figure>
-                        <img src="assets/frustrated-student.jpg" width="400px" alt="frustrated student">
+                        <img src="assets/frustrated-student-opt.jpg" width="400px" alt="frustrated student">
                         <figcaption class="attribution"><a href='https://www.freepik.com/photos/computer'>Computer photo created by marymarkevich -
                             www.freepik.com</a>
                         </figcaption> 
