contact page html and styles

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <p>We see our Senior Tutors as untapped, valuable individuals who have much to share and contribute.</p>
                 <p>We see our students as individuals with unlimited potential.</p>
                 <p>Partner with us today</p>
-                <button class="cta">Get Started</button>
+                <button onclick="window.location.href='contact.html'" class="cta">Get Started</button>
             </section>
             <section class="team">
                 <h2>Meet Our Team</h2>
