--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <p>Interested in being a student or a tutor?</p>
                     <p> Have questions you need answered before getting started with us?</p>
                     <p>We'd love to hear from you!</p>
-                    <p>Just submit the contact form below.</p>
+
                 </div>
                 <div class="intro-img">
                     <figure>
@@ -54,24 +54,28 @@
             <section class="contact-form">
                 <h2>Contact Us</h2>
                 <form action="#">
-                    <div class="first-section">
+                    <div class="form-group">
                         <div class="fname item">
                             <!-- first name -->
                             <label for="fname">First name:</label>
                             <input type="text" name="fname" id="fname" placeholder='First Name' autofocus required>
                         </div>
+                    </div>
+                    <div class="form-group">
                         <div class="lname item">
                             <!-- last name -->
                             <label for="lname">Last name:</label>
                             <input type="text" name="lname" id="lname" placeholder='Last Name' required>
                         </div>
+                    </div>
+                    <div class="form-group">
                         <div class="email item">
                             <!-- email -->
                             <label for="email">Email:</label>
                             <input type="email" name="email" id="email" placeholder='Email' required>
                         </div>
                     </div>
-                    <div class="second-section">
+                    <div class="form-group">
                         <div class="referral item">
                             <!-- How did you hear about us? -->
                             <label for="referral">How did you hear about us?</label>
@@ -84,6 +88,8 @@
                                 <option value="sponsor">Current sponsor</option>
                             </select>
                         </div>
+                    </div>
+                    <div class="form-group">
                         <div class="role item">
                             <!-- Choose volunteer, tutor, or partner -->
                             <h3 class="type">Choose your role below: </h3>
@@ -95,14 +101,16 @@
                             <label for="sponsor">Sponsor</label>
                         </div>
                     </div>
-                    <div class="third-section">
+                    <div class="form-group">
                         <div class="message">
                             <!-- text box for questions -->
                             <h3>Please include your comments and questions.</h3>
-                            <textarea name="message" id="" cols="30" rows="10">
-                            </textarea>
-                            <button type="button" onclick="alert('Thanks for getting in touch. We will be in contact within 24 hours.')">Submit</button>
+                            <textarea name="message" id="" cols="30" rows="10"></textarea>
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <button class="cta" type="button"
+                            onclick="alert('Thanks for getting in touch. We will be in contact within 24 hours.')">Submit</button>
                     </div>
                 </form>
             </section>
