updated contact.html with responsive nav and link to navbar.js

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,22 @@
         <header class="landing-page">
             <nav>
                 <ul>
-                    <li id="logo" class="home"><a href="index.html"><img src="assets/up-24.png">upGrade Tutors</a></li>
-                    <li><a href="#">Enroll in Tutoring</a></li>
-                    <li><a href="#">Become a Tutor</a></li>
-                    <li><a href="about.html">Partner with Us</a></li>
-                    <li id="signin" class="logo"><a href="#">Sign In</a></li>
-                    <li class="logo"><a href="#">Sign Up</a></li>
+                    <li id="logo" class="home"><a href="index.html"><img src="assets/up-24.png"
+                                alt="logo up arrow">upGrade Tutors</a></li>
+                    <li class="toggle-menu"><span id="toggle" class="material-icons">
+                            menu
+                        </span></li>
+                    <div id="responsive-nav" class="responsive-nav">
+                        <li><a href="#">Enroll in Tutoring</a></li>
+                        <li><a href="#">Become a Tutor</a></li>
+                        <li><a href="about.html">Partner with Us</a></li>
+                    </div>
+                    <li id="login" class="logo"><a href="#"><span class="material-icons">
+                                login
+                            </span>Log In</a></li>
+                    <li id="signup" class="logo"><a href="#"><span class="material-icons">
+                                person_add_alt_1
+                            </span>Sign Up</a></li>
                 </ul>
             </nav>
             <div class="mission-tagline">
@@ -129,3 +139,7 @@
             <p>&copy; 2020 <img src="assets/up-24.png" alt="logo up arrow"><span class="logo">upGrade Tutors</span></p>
         </footer>
     </div>
+    <script src=navbar.js></script>
+</body>
+
+</html>
