added links to react app, edited text content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Primary Navigation -->
             <nav>
                 <ul>
-                    <li id="logo"><a href="#"><img src="assets/up-24.png" alt="logo up arrow"><a href="#">upGrade Tutors</a></li>
+                    <li id="logo"><a href="#"><img src="assets/up-24.png" alt="logo up arrow">upGrade Tutors</a></li>
                     <li class="toggle-menu"><span id="toggle" class="material-icons">
                         menu
                     </span></li>
@@ -30,10 +30,10 @@
                         <li><a href="#">Become a Tutor</a></li>
                         <li><a href="about.html">Partner with Us</a></li>
                     </div>
-                    <li id="login" class="logo"><a href="#"><span class="material-icons">
+                    <li id="login" class="logo"><a href=" https://upgrade-sigma.vercel.app/login"><span class="material-icons">
                                 login
                             </span>Log In</a></li>
-                    <li id="signup" class="logo"><a href="#"><span class="material-icons">
+                    <li id="signup" class="logo"><a href="https://upgrade-sigma.vercel.app/signup"><span class="material-icons">
                                 person_add_alt_1
                             </span>Sign Up</a></li>
                 </ul>
@@ -49,11 +49,11 @@
             <section class="intro">
                 <div class="intro-text">
                     <h1>Welcome to <img src="assets/up-24.png" alt="logo up arrow"><span class="logo">upGrade Tutors</span>.</h1>
-                    <p>We connect seniors with expertise, empathy, and availability with students who are frustrated,
+                    <p>We connect Seniors with expertise, empathy, and availability with Students who are frustrated,
                         struggling, and teachable.</p>
-                    <p>Our students thrive with our tutors 1-on-1 support.</p>
-                    <p>Our senior volunteers enjoy the positive impact they have on the lives of our students.</p>
-                    <button onclick="window.location.href='#'" class="cta">Get Started</button>
+                    <p>Our Students thrive with our tutors 1-on-1 support.</p>
+                    <p>Our Senior volunteers enjoy the positive impact they have on the lives of our students.</p>
+                    <button onclick="window.location.href='https://upgrade-sigma.vercel.app/signup'" class="cta">Get Started</button>
                 </div>
                 <div class="intro-img">
                     <figure>
@@ -84,7 +84,7 @@
                                 created by freepik - www.freepik.com</a>
                         </figcaption>
                     </figure>
-                    <p>Are you a retired senior with expertise, empathy, and time to share. Your knowledge and support
+                    <p>Are you a retired senior with expertise, empathy, and time to share? Your knowledge and support
                         can make a difference in the life of a high school student. Choose your academic subject
                         strengths and set your own availability.</p>
                     <button onclick="window.location.href='#'" class="cta">Become a Tutor</button>
