--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
                         <li><a href="#">Become a Tutor</a></li>
                         <li><a href="about.html">Partner with Us</a></li>
                     </div>
-                    <li id="login" class="logo"><a href="#"><span class="material-icons">
+                    <li id="login" class="logo"><a href=" https://upgrade-sigma.vercel.app/login"><span class="material-icons">
                                 login
                             </span>Log In</a></li>
-                    <li id="signup" class="logo"><a href="#"><span class="material-icons">
+                    <li id="signup" class="logo"><a href="https://upgrade-sigma.vercel.app/signup"><span class="material-icons">
                                 person_add_alt_1
                             </span>Sign Up</a></li>
                 </ul>
@@ -45,11 +45,11 @@
         <main class="about-page">
             <!-- upGrade Tutors team values -->
             <section class="mission">
-                <h1>At <img src="assets/up-24.png"><span class="logo">upGrade Tutors:</span></h1>
+                <h1>At <img src="assets/up-24.png" alt="logo up arrow"><span class="logo">upGrade Tutors:</span></h1>
                 <p>We are passionate about accessibility and equity in learning.</p>
                 <p>We see our Senior Tutors as untapped, valuable individuals who have much to share and contribute.</p>
-                <p>We see our students as individuals with unlimited potential.</p>
-                <p>Partner with us today</p>
+                <p>We see our Students as individuals with unlimited potential.</p>
+                <p>Partner with us today.</p>
                 <button onclick="window.location.href='contact.html'" class="cta">Contact Us</button>
             </section>
             <!-- upGrade Tutors intro to team -->
