--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
                         <li><a href="#">Become a Tutor</a></li>
                         <li><a href="about.html">Partner with Us</a></li>
                     </div>
-                    <li id="login" class="logo"><a href="#"><span class="material-icons">
+                    <li id="login" class="logo"><a href="https://upgrade-sigma.vercel.app/login"><span class="material-icons">
                                 login
                             </span>Log In</a></li>
-                    <li id="signup" class="logo"><a href="#"><span class="material-icons">
+                    <li id="signup" class="logo"><a href="https://upgrade-sigma.vercel.app/signup"><span class="material-icons">
                                 person_add_alt_1
                             </span>Sign Up</a></li>
                 </ul>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="form-group">
                         <button class="cta" type="button"
-                            onclick="alert('Thanks for getting in touch. We will be in contact within 24 hours.')">Submit</button>
+                            onclick="#">Submit</button>
                     </div>
                 </form>
             </section>
