added comments to contact.html

--- a/about.html
+++ b/about.html
@@ -81,10 +81,8 @@
                                 width="200px" alt="Nathan Griffith">
                             <figcaption>Nathan Griffith<br>Front End Developer<figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, ratione ut a minima nemo
-                            odit
-                            natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
-                            beatae.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio doloremque ex cumque et quod inventore sint 
+                            impedit voluptatibus voluptatem laudantium aut, quasi, sit eveniet sed? Exercitationem aperiam impedit nisi.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/ngriffith29" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -150,11 +148,8 @@
                             <figcaption>Gina Russell<br>UI Developer<figcaption>
                         </figure>
                         <p>I am an insatiably curious enthusiastic learner, a collaborative team player, and driven to
-                            excellence. I embrace both a growth mindset and an abundance mentality. I have 10+ years
-                            experience in education, learning to learn, and teaching others. I am a full-stack web
-                            developer
-                            with a current interest in front end development. My skills include HTML, CSS, JavaScript,
-                            Python, and git version control</p>
+                            excellence. I have 10+ years experience in education, learning to learn, and teaching others. I am a full-stack web
+                            developer with a current interest in front end development.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/ginabethrussell" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
