--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>upGrade Tutors - Contact</title>
+    <!-- add up arrow icon to title tab -->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/styles.css">
     <link
@@ -16,6 +17,7 @@
 <body>
     <div class="wrapper">
         <header class="landing-page">
+            <!-- Primary Navigation -->
             <nav>
                 <ul>
                     <li id="logo" class="home"><a href="index.html"><img src="assets/up-24.png"
@@ -42,6 +44,7 @@
             </div>
         </header>
         <main class="contact">
+            <!-- upGrade Tutors Contact Us for Information -->
             <section class="intro">
                 <div class="intro-text">
                     <h1 class="contact-header"><span class="material-icons question">
@@ -61,6 +64,7 @@
                     </figure>
                 </div>
             </section>
+            <!-- Contact form for more info -->
             <section class="contact-form">
                 <h2>Contact Us</h2>
                 <form action="#">
@@ -128,11 +132,7 @@
         <footer class="landing-page">
             <div class="icon-attr">
                 <p>Icons made by
-                    <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,
-                    <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>,
-                    <a href="https://www.flaticon.com/authors/photo3idea-studio"
-                        title="photo3idea_studio">photo3idea_studio</a>, and <a
-                        href="https://www.flaticon.com/authors/surang" title="surang">surang</a>
+                    <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
                     from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
                 </p>
             </div>
